# ruvpy

./: .gitignore  AUTHORS  CITATION.cff  CONTIBUTING.md  CONTRIBUTING.md  CONTRIBUTORS  COPYING  LICENSE  LICENSE.txt  NOTICE  README.md  code_of_conduct.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
docs/: index.html
docs/ruvpy/: damage_functions.html  data_classes.html  decision_rules.html  economic_models.html  helpers.html  index.html  multi_timestep.html  probability_weight_functions.html  relative_utility_value.html  single_timestep.html  utility_functions.html
docs/ruvpy/examples/: index.html
docs/ruvpy/templates/: damage_function_template.html  decision_rule_template.html  economic_model_template.html  index.html  utility_function_template.html
docs/ruvpy/tests/: index.html  test_damage_functions.html  test_decision_rules.html  test_economic_models.html  test_helpers.html  test_multi_timestep.html  test_relative_utility_value.html  test_single_timestep.html  test_utility_functions.html
examples/: 401012_data.pickle.bz2  405209_data.pickle.bz2  405219_data.pickle.bz2  basic_example.ipynb  bench.py  bench_results.ipynb  bench_results_full_chunk.csv  bench_results_half_chunks.csv  bench_results_no_chunks.csv  bench_results_single_chunks.csv  bench_results_sqrt_chunks.csv  benchmark.ipynb  benchmark.py  dask_test.py  example_1 copy.ipynb  example_1.ipynb  example_2.ipynb  example_3.ipynb  example_4.ipynb  example_5.ipynb  example_6.ipynb  example_7.ipynb  example_8.ipynb  example_data.pickle.bz2  example_imports.py  laugesen_2023_fig_5.ipynb  laugesen_2023_fig_6.ipynb  laugesen_2023_fig_7.ipynb  laugesen_2023_fig_8.ipynb  laugesen_2024_fig_4.ipynb  laugesen_2024_fig_5.ipynb  laugesen_2024_fig_6.ipynb  profile.html  ruv_basic_usage.ipynb  testing.py
examples/output/: ruv_bootstrap_distribution.pickle  ruv_confidence_interval.pickle  ruv_standard_error.pickle
laugesen_2023b/: bench.py  bench_results.csv  benchmark.ipynb  gen_shape_fig.py  hydrograph_clim_fdc_figure.py  location_figure.py  map_figure.py  notebook_runner.ipynb  pathos_test.py  phoenix-launch.slurm  regime_figure.py  shape_figure.py  slurm-2873281.out  util.py
laugesen_2023b/figures/: hydrograph_clim_fdc_405209_LT1-7.pkl.bz2
ruv/: damage_functions.py  data_classes.py  decision_methods.py  decision_rules.py  economic_models.py  helpers.py  multi_timestep.py  relative_utility_value.py  ruv.py  single_timestep.py  templates.py  utility_functions.py
ruvpy/: damage_functions.py  data_classes.py  decision_rules.py  economic_models.py  helpers.py  multi_timestep.py  probability_weight_functions.py  relative_utility_value.py  single_timestep.py  utility_functions.py
ruvpy/examples/: laugesen_2023_fig_5.ipynb  laugesen_2023_fig_6.ipynb  laugesen_2023_fig_7.ipynb  laugesen_2023_fig_8.ipynb  laugesen_2024_fig_4.ipynb  laugesen_2024_fig_5.ipynb  laugesen_2024_fig_6.ipynb
ruvpy/templates/: economic_model_template.py  utility_function_template.py
ruvpy/tests/: test_damage_functions.py  test_helpers.py  test_multi_timestep.py  test_relative_utility_value.py  test_utility_functions.py
templates/: damage_function_template.py  decision_rule_template.py  economic_model_template.py  utility_function_template.py
tests/: test_damage_functions.py  test_data_classes.py  test_decision_methods.py  test_decision_rules.py  test_economic_models.py  test_helpers.py  test_multi_timestep.py  test_relative_utility_value.py  test_single_timestep.py  test_utility_functions.py
