[tool.poetry]
name = "ruvpy"
version = "0.9.1"
description = "Reference implementation for the Relative Utility Value forecast value method."
authors = ["Richard Laugesen <richard@laugesen.com.au>"]
license = "Apache-2.0"
package-mode = true
readme = "README.md"

include = [
    "README.md",
    "LICENSE",
    "AUTHORS"
]

[tool.poetry.dependencies]
python = ">=3.10"   # Core will run with 3.9, xarray requires 3.10 but is only needed for examples
numpy = ">=1.24.4"
scipy = ">=1.9.3"
pathos = ">=0.3.0"

[tool.poetry.extras]
examples = ["matplotlib", "xarray", "pandas", "jupyter"]

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=5.0.0"
statsmodels = ">=0.13.5"
flake8 = ">=7.0.0"
black = ">=24.0.0"
mypy = ">=1.0.0"
pdoc3 = ">=0.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
