[tool.poetry]
name = "ruvpy"
version = "1.0.0"
description = "Reference implementation of the Relative Utility Value method for evaluating probabilistic forecasts."
authors = ["Richard Laugesen <richard@laugesen.com.au>"]
license = "AGPL-3.0-or-later"
package-mode = true
readme = "README.md"

[tool.poetry.urls]
"Homepage" = "https://github.com/richardlaugesen/ruvpy"
"Source Code" = "https://github.com/richardlaugesen/ruvpy"
"Issue Tracker" = "https://github.com/richardlaugesen/ruvpy/issues"
"Documentation" = "https://github.com/richardlaugesen/ruvpy#readme"
"Citation" = "https://doi.org/10.5281/zenodo.NEW_ID"

[tool.poetry.classifiers]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Decision Support Systems",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Hydrologic Sciences",
    "Topic :: Office/Business :: Financial",
]

include = [
    "README.md",
    "LICENSE",
    "AUTHORS"
]

[tool.poetry.dependencies]
python = ">=3.10"  # Core will run with 3.9; xarray requires 3.10 but is only needed for examples
numpy = ">=1.24.4"
scipy = ">=1.9.3"
pathos = ">=0.3.0"

[tool.poetry.extras]
examples = ["matplotlib", "xarray", "pandas", "jupyter"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=5.0.0"
statsmodels = ">=0.13.5"
flake8 = ">=7.0.0"
black = ">=24.0.0"
mypy = ">=1.0.0"
pdoc3 = ">=0.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
