[tool.poetry]
name = "ruvpy"
version = "1.0.0"
description = "Reference implementation of Relative Utility Value (RUV) to quantify forecast value"
authors = ["Richard Laugesen <richard@laugesen.com.au>"]
license = "Apache-2.0"
package-mode = true
readme = "README.md"
include = [
    "README.md",
    "LICENSE",
    "CONTRIBUTORS",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Office/Business :: Financial",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/richardlaugesen/ruvpy"
"Source Code" = "https://github.com/richardlaugesen/ruvpy"
"Issue Tracker" = "https://github.com/richardlaugesen/ruvpy/issues"
"Documentation" = "https://github.com/richardlaugesen/ruvpy#readme"
"Citation" = "https://doi.org/10.5281/zenodo.13939198"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.24.4"
scipy = ">=1.9.3"
pathos = ">=0.3.0"

[tool.poetry.extras]
examples = ["matplotlib", "xarray", "pandas", "jupyter"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=5.0.0"
statsmodels = ">=0.13.5"
flake8 = ">=7.0.0"
black = ">=24.0.0"
mypy = ">=1.0.0"
pdoc3 = ">=0.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
